corrected the z-index of the navbar

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -29,7 +29,7 @@
 /* !-- COLOR SCHEME --! */
 
 .navbar{
-    z-index: 9999;
+    z-index: 9000;
 }
 
 a.brand img {
